[gd_scene load_steps=2 format=3]

[ext_resource path="res://modules/paranoia_meter/DebugConsole.gd" type="Script" id=1]

[node name="DebugConsole" type="CanvasLayer" script=ExtResource(1)]

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.3
anchor_bottom = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GunshotButton" type="Button" parent="VBoxContainer"]
text = "Gunshot"

[node name="AloneButton" type="Button" parent="VBoxContainer"]
text = "Alone"

[node name="CalmingPillsButton" type="Button" parent="VBoxContainer"]
text = "Calming Pills"

[node name="WarmTeaButton" type="Button" parent="VBoxContainer"]
text = "Warm Tea"

[node name="DarkForest" type="CheckBox" parent="VBoxContainer"]
text = "Dark Forest"

[node name="LushGreen" type="CheckBox" parent="VBoxContainer"]
text = "Lush Green"

